--- a/style.css
+++ b/style.css
@@ -1,12 +1,19 @@
 body{
     font-family: Arial, Verdana, sans-serif;
     font-size: 14pt;
-    background-color: #f0f0f0;
-    color: #333;
+    background-color: #703838#5988F3;
+    color: #383737;
+    border: #ff0000;
 }
 
 h1{
     color: #00a800;
     font-size: 24pt;
     font-family: Georgia, Times, serif;
+}
+
+p{
+    color:#333;
+    font-size: 12pt;
+    font-family: 'Times New Roman', Times, serif ;
 }
