--- a/style.css
+++ b/style.css
@@ -17,3 +17,9 @@ p{
     font-size: 12pt;
     font-family: 'Times New Roman', Times, serif ;
 }
+
+h2{
+    color:#5988F3;
+    font-size: 24pt;
+    font-family: Georgia, Times, serif;
+}
