--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 body{
     font-family: Arial, Verdana, sans-serif;
     font-size: 14pt;
-    background-color: #703838#5988F3;
+    background-color: #3e773c;
     color: #383737;
-    border: #ff0000;
+    border: 4pt solid #000000;
 }
 
 h1{
@@ -18,6 +18,11 @@ p{
     font-family: 'Times New Roman', Times, serif ;
 }
 
+h2{
+    color:#5988F3;
+    font-size: 24pt;
+    font-family: Georgia, Times, serif;
+}
 h2{
     color:#5988F3;
     font-size: 24pt;
