--- a/style.css
+++ b/style.css
@@ -22,6 +22,8 @@ h2{
     color:#5988F3;
     font-size: 24pt;
     font-family: Georgia, Times, serif;
+    text-decoration: overline;
+    text-decoration-color: #9c7746;
 }
 h2{
     color:#5988F3;
